<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_pullr_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/edtUserName"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="35dp"
        style="@style/TextStyle"
        android:text="@string/user_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_your_github_username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:padding="12dp"
        android:text="@string/my_github_username"
        android:textColor="@color/light_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/tvRepoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName"
        style="@style/TextStyle"
        android:text="@string/repo_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtRepoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_your_github_repo_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/github_repo_name"
        android:textColor="@color/light_black"
        app:layout_constraintTop_toBottomOf="@+id/tvRepoName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:alpha="0.7"
        android:background="@drawable/bg_button_shape"
        android:padding="0dp"
        android:text="@string/continue_msg"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtRepoName"
        app:layout_constraintStart_toStartOf="@+id/edtRepoName"
        app:layout_constraintTop_toBottomOf="@+id/edtRepoName" />

</androidx.constraintlayout.widget.ConstraintLayout>